# unit-converter-rs

./: Base_Conversions.toml  Cargo.toml  README.md  Units.toml
cli/: Base_Conversions.toml  Cargo.toml  Units.toml
cli/src/: logger.rs  main.rs  options.rs
crates/expr/: Cargo.toml
crates/expr/src/: ast.rs  error.rs  expression.rs  functions.rs  lib.rs  shunting_yard_algorithm.rs
crates/expr/src/parser/: error.rs  tokenizer.rs
crates/expr/tests/: integration_tests.rs
crates/expr/tests/common/: mod.rs
crates/unit-converter/: Cargo.toml
crates/unit-converter/benches/: conversions.rs
crates/unit-converter/src/: converter.rs  graph.rs  lib.rs  parser.rs
crates/unit-converter/src/converter/: builder.rs  error.rs
crates/unit-converter/src/expressions/: mod.rs
crates/unit-converter/src/source/toml/: conversions.rs  units.rs
crates/unit-converter/tests/: expressions.rs  integration_tests.rs
crates/unit-converter/tests/common/: mod.rs
lib/: Cargo.toml
lib/benches/: builder.rs  conversions.rs
lib/src/: converter.rs  graph.rs  lib.rs  parser.rs  units.rs
lib/src/converter/: builder.rs  error.rs
lib/src/expressions/: error.rs  expression.rs  functions.rs  mod.rs  shunting_yard_algorithm.rs  tokenizer.rs
lib/src/parser/: error.rs  tokenizer.rs
lib/src/persistence/: file.rs  in_memory.rs  mod.rs
lib/src/source/: mod.rs
lib/src/source/toml/: conversions.rs  mod.rs  parse_helper.rs  units.rs
lib/tests/: expressions.rs  intergration_tests.rs  length_conversions.rs
lib/tests/common/: mod.rs
