[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "unitconverter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
console = "0.15.7"
log = "0.4.20"

[dependencies.unitconvert]
version = "0.1.0"
path = "../lib"
