[package]
name = "unitconvert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
nom = "7.1.3"
toml = "0.8.8"

[dependencies.expr]
version = "0.1.0"
path = "../expr/"

[dev-dependencies]
criterion = "0.5.1"
simple_logger = "4.3.3"
test-case = "3.3.1"

[[bench]]
name = "conversions"
harness = false

[[bench]]
name = "builder"
harness = false
